--- a/src/app/components/evento-editar/evento-editar.component.html
+++ b/src/app/components/evento-editar/evento-editar.component.html
@@ -360,7 +360,7 @@
                                         <div class="row mt-3 border" *ngFor='let img of imgs'>
                                             <div class="col-md-12 text-center">
                                                 <img [src]="'assets/img/eventos/'+img.ruta_imagen_eve " height="300" width="400"><br>
-                                                <button type="button" class="btn btn-danger">Eliminar</button>
+                                                <button type="button" class="btn btn-danger" (click)="eliminarImg( img.id_imagen_eve )">Eliminar</button>
                                             </div>
                                         </div>
                                     </div>
